--- a/css/demo.css
+++ b/css/demo.css
@@ -58,8 +58,9 @@ hr {
 }
 
 h1 {
-    font-family: Bradley Hand ITC;
-    font-size: 2.5em;
+    font-family: 'Pacifico', Bradley Hand ITC;
+    font-size: 4.0em;
+    margin-bottom: 0px
 }
 
 #welcomeText {
@@ -68,8 +69,9 @@ h1 {
 }
 
 td {
-    padding-right: 10px;
+    padding: 5px;
     font-size: 1.3em;
+    
 }
 
 td strong {
@@ -87,8 +89,14 @@ td strong {
 
 ul {
     text-align: left;
-    padding-left: 200px;
+    padding-left: 30%;
+    font-size: 1.2em;
 }
 .hobby{
     color: yellow;
+}
+
+#content {
+    text-align: center;
+  
 }
