--- a/css/demo.css
+++ b/css/demo.css
@@ -11,7 +11,8 @@ body {
 
 header,
 nav,
-footer {
+footer,
+#content {
     text-align: center;
 }
 
@@ -49,8 +50,8 @@ nav a:hover {
     /*pseudo class*/
     border-bottom: 2px orange solid;
     font-size: 2.0em;
-    transition: .9s;
-    /* slow the change*/
+    /*transition: .9s;*/
+    /* slow the change - moves the layout*/
 }
 
 hr {
@@ -58,7 +59,7 @@ hr {
 }
 
 h1 {
-    font-family: 'Pacifico', Bradley Hand ITC;
+    font-family: 'Courgette', Bradley Hand ITC;
     font-size: 4.0em;
     margin-bottom: 0px
 }
@@ -71,7 +72,7 @@ h1 {
 td {
     padding: 5px;
     font-size: 1.3em;
-    
+
 }
 
 td strong {
@@ -92,11 +93,7 @@ ul {
     padding-left: 30%;
     font-size: 1.2em;
 }
-.hobby{
-    color: yellow;
-}
 
-#content {
-    text-align: center;
-  
+.hobby {
+    color: yellow;
 }
